# test-actions

./: .env.vps.example  .gitignore  AGENTS.md  README.md  docker-compose.vps.yml  docker-compose.yml
.claude/: CLAUDE.md
.gemini/: GEMINI.md
.github/: init_gh.sh
.github/workflows/: sync-upstream.yml  vps.yml
backend/: .dockerignore  Dockerfile  README.md  THIRD-PARTY-LICENSES.txt  docker-compose.yml  etalon.env  pyproject.toml
backend/init/: embeddings_output.json  init.py  init_ai_models.py  init_mock_db.py  migrate_search_tokens.py  mock_data_helper.py
backend/instacrud/: app.py  config.py  context.py  crypto.py  database.py  main.py  utils.py
backend/instacrud/ai/: ai_service.py  ai_service_completion.py  ai_service_embedding.py  ai_service_vision.py  mcp_client.py  usage_tracker.py  vector_search.py
backend/instacrud/api/: ai_api.py  ai_dto.py  api_utils.py  calendar_api.py  calendar_dto.py  middleware.py  oauth_api.py  organization_api.py  organization_dto.py  provisioning.py  rate_limiter.py  search.py  search_service.py  system_api.py  system_dto.py  validators.py
backend/instacrud/helpers/: gcp_firebase_helper.py
backend/instacrud/mailer/: __init__.py  brevo_email_service.py  email_service.py  file_email_service.py  gmail_email_service.py  smtp_email_service.py  templates.py
backend/instacrud/mailer/templates/: invitation.html  invitation.txt  password_reset.html  password_reset.txt
backend/instacrud/model/: model_helper.py  organization_model.py  system_model.py
backend/static/: index.html
backend/test/: ai_agent_test.py  conftest.py  crypto_url_test.py  firestore_test.py  lifecycle_test.py  pentest_test.py  run_all_test.py  svt_test.py  tz_test.py  vector_search_test.py
bruno/InstaCRUD/: Get Projects Period.bru  bruno.json  collection.bru
bruno/InstaCRUD/addresses/: Create Item (6).bru  Delete Item (6).bru  Get Item (6).bru  List Items (6).bru  Patch Item (6).bru  Update Item (6).bru  folder.bru
bruno/InstaCRUD/admin/: Add User.bru  Create Item (POST).bru  Create Item.bru  Delete Invitation.bru  Delete Item (DELETE).bru  Delete Item.bru  Delete Organization.bru  Delete User.bru  Get Item (GET).bru  Get Item.bru  Get Organization.bru  Get User.bru  Invite User.bru  List Invitations.bru  List Items (GET).bru  List Items.bru  List Organizations.bru  List Users.bru  Onboard Organization.bru  Patch Item (PATCH).bru  Patch Item.bru  Update Item (PUT).bru  Update Item.bru  (+3 more)
docs/: LICENSE  README.md  docusaurus.config.js  package-lock.json  sidebars.js
docs/docs/: intro.md
frontend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.vps  LICENSE  README.md  THIRD-PARTY-LICENSES.txt  docker-compose.yml  etalon.env  jest.config.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/scripts/: add-required-fields.js
frontend/test/: README.md  ai_agent_test.ts  config.ts  helpers.ts  run_all_test.ts  setup.ts  tz_test.ts
nginx/: Dockerfile  docker-entrypoint.sh  init-letsencrypt.sh  nossl.conf  ssl.conf.template
(+347 files in other folders)
